CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(hurl)

SET(HURL_VERSION_MAJOR 0)
SET(HURL_VERSION_MINOR 0)
SET(HURL_VERSION_PATCH 1)
SET(HURL_VERSION "${HURL_VERSION_MAJOR}.${HURL_VERSION_MINOR}.${HURL_VERSION_PATCH}")
OPTION(HURL_DEBUG "Enable debugging messages support" ON)

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

CONFIGURE_FILE(
    "${PROJECT_SOURCE_DIR}/config.hpp.in"
    "${PROJECT_SOURCE_DIR}/src/lib/config.hpp"
)

ADD_SUBDIRECTORY(src)

