CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(throttle)

SET(THROTTLE_VERSION_MAJOR 0)
SET(THROTTLE_VERSION_MINOR 0)
SET(THROTTLE_VERSION_PATCH 3)
SET(THROTTLE_VERSION "${THROTTLE_VERSION_MAJOR}.${THROTTLE_VERSION_MINOR}.${THROTTLE_VERSION_PATCH}")
OPTION(THROTTLE_DEBUG "Enable debugging messages support" ON)

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

CONFIGURE_FILE(
    "${PROJECT_SOURCE_DIR}/config.hpp.in"
    "${PROJECT_SOURCE_DIR}/src/throttle/config.hpp"
)

ADD_SUBDIRECTORY(src)

