CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_BUILD_TYPE "Debug")

SET(PROJECT hurl)

SET(HEADERS
    utils.hpp
    timer.hpp
    watcher.hpp
    network_request.hpp
    HttpRequestManager.hpp
)

SET(SOURCES
    network_request.cpp
    HttpRequestManager.cpp
)

SET(BOOST_COMPONENTS
    system
)

PROJECT($PROJECT)

FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

ADD_LIBRARY(${PROJECT} SHARED
    ${HEADERS}
    ${SOURCES}
)

TARGET_LINK_LIBRARIES(${PROJECT}
    ${CMAKE_THREAD_LIBS_INIT}
    ${Boost_LIBRARIES}
    curl
    ev
)

SET_TARGET_PROPERTIES(${PROJECT} PROPERTIES ENABLE_EXPORTS true)
ADD_DEFINITIONS(-std=c++11)

